--- a/Bakalarska Práca/Bakalarska Práca/Properties/Settings.settings
+++ b/Bakalarska Práca/Bakalarska Práca/Properties/Settings.settings
@@ -11,5 +11,14 @@
     <Setting Name="Camera" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="Tolerance" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">5</Value>
+    </Setting>
+    <Setting Name="ColorLow" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">Black</Value>
+    </Setting>
+    <Setting Name="ColorHigh" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">White</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
